--- a/app/views/beta-sprint-3/ra-user-flow-1-without-approval/profession-4-neurosurgery.html
+++ b/app/views/beta-sprint-3/ra-user-flow-1-without-approval/profession-4-neurosurgery.html
@@ -229,6 +229,11 @@
           <span class="govuk-body">Draft</span>
         </h2>
 
+        <h2 class="govuk-heading-s">
+          Changed by<br>
+          <span class="govuk-body">Alex Young</span>
+        </h2>
+        
         <nav role="navigation" aria-labelledby="subsection-title">
 
           <ul class="govuk-list">
