--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-2-registered-gas-engineer.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/profession-2-registered-gas-engineer.html
@@ -229,6 +229,11 @@
           <span class="govuk-body">Published</span>
         </h2>
 
+        <h2 class="govuk-heading-s">
+          Changed by<br>
+          <span class="govuk-body">Clare Jones</span>
+        </h2>
+
         <nav role="navigation" aria-labelledby="subsection-title">
 
           <ul class="govuk-list">
