--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-1.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-1.html
@@ -55,7 +55,7 @@
           <form action="professions-listing-2" method="post" class="form">
 
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukInput({
                   label: {
                     text: "Keyword",
@@ -72,7 +72,7 @@
                 }) }}
               </div>
 
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukCheckboxes({
                   idPrefix: "profession-nations",
                   name: "profession-nations",
@@ -112,7 +112,7 @@
                 }) }}
               </div>
 
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukCheckboxes({
                   idPrefix: "profession-regulators",
                   name: "profession-regulators",
@@ -142,6 +142,81 @@
                       value: "Education Workforce Council",
                       text: "Education Workforce Council",
                       checked: checked("profession-regulators", "Education Workforce Council")
+                    }
+                  ]
+                }) }}
+              </div>
+
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukCheckboxes({
+                  idPrefix: "profession-industries",
+                  name: "profession-industries",
+                  classes: "govuk-checkboxes--small rpr-internal-listing__filter",
+                  fieldset: {
+                    legend: {
+                      text: "Industry / sector",
+                      isPageHeading: true,
+                      classes: "govuk-fieldset__legend--s"
+                    }
+                  },
+                  hint: {
+                    text: "Select all that apply."
+                  },
+                  items: [
+                    {
+                      value: "construction-engineering",
+                      text: "Construction & Engineering",
+                      checked: checked("profession-industries", "construction-engineering")
+                    },
+                    {
+                      value: "education",
+                      text: "Education",
+                      checked: checked("profession-industries", "education")
+                    },
+                    {
+                      value: "finance",
+                      text: "Finance",
+                      checked: checked("profession-industries", "finance")
+                    },
+                    {
+                      value: "health",
+                      text: "Health",
+                      checked: checked("profession-industries", "health")
+                    },
+                    {
+                      value: "law",
+                      text: "Law",
+                      checked: checked("profession-industries", "law")
+                    },
+                    {
+                      value: "shipping",
+                      text: "Shipping",
+                      checked: checked("profession-industries", "shipping")
+                    },
+                    {
+                      value: "other",
+                      text: "Other",
+                      checked: checked("profession-industries", "other")
+                    },
+                    {
+                      value: "security",
+                      text: "Security",
+                      checked: checked("profession-industries", "security")
+                    },
+                    {
+                      value: "transport",
+                      text: "Transport",
+                      checked: checked("profession-industries", "transport")
+                    },
+                    {
+                      value: "energy",
+                      text: "Energy",
+                      checked: checked("profession-industries", "energy")
+                    },
+                    {
+                      value: "science",
+                      text: "Science",
+                      checked: checked("profession-industries", "science")
                     }
                   ]
                 }) }}
@@ -194,6 +269,14 @@
         </p>
       {% endif %}
       
+      {% if data['profession-industries'] %}
+        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Industries / sectors:</span> 
+        {% for industry in data['profession-industries'] %}
+          <strong class="govuk-tag">{{ industry }}</strong>
+        {% endfor %}
+        </p>
+      {% endif %}
+
       <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">221</span> professions found.</p>
 
 
@@ -214,6 +297,9 @@
           },
           {
             text: "Regulators"
+          },
+          {
+            text: "Industry / sector"
           },
           {
             text: "Status"
@@ -240,10 +326,13 @@
               text: "Capita Gas Registration and Ancillary Services Ltd"
             },
             {
+              text: "Construction & Engineering"
+            },
+            {
               text: "Published"
             },
             {
-              html: '<a class="govuk-link" href="#">View details</a>'
+              html: '<a class="govuk-link" href="profession-2-registered-gas-engineer">View details</a>'
             }
           ],
           [
@@ -261,6 +350,9 @@
             },
             {
               text: "Education Workforce Council"
+            },
+            {
+              text: "Education"
             },
             {
               text: "Published"
@@ -286,6 +378,9 @@
               text: "Education Workforce Council"
             },
             {
+              text: "Education"
+            },
+            {
               text: "Published"
             },
             {
@@ -307,6 +402,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -332,6 +430,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -353,6 +454,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -378,6 +482,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -399,6 +506,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -424,6 +534,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -445,6 +558,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -470,6 +586,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -491,6 +610,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -516,6 +638,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -537,6 +662,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -562,6 +690,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -583,6 +714,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -608,6 +742,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -629,6 +766,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -654,6 +794,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -675,6 +818,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -700,6 +846,9 @@
               text: "General Medicine Council"
             },
             {
+              text: "Health"
+            },
+            {
               text: "Published"
             },
             {
@@ -721,6 +870,9 @@
             },
             {
               text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
