--- a/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-after-2.html
+++ b/app/views/beta-sprint-3/ukcpq-user-flow-1-without-approval/professions-listing-after-2.html
@@ -20,7 +20,7 @@
 {% block content %}
 
   <h1 class="govuk-heading-xl">
-    <span class="govuk-caption-l">General Medical Council</span>
+    <span class="govuk-caption-l">UK Centre for Professional Qualifications</span>
     Regulated professions
   </h1>
 
@@ -55,7 +55,7 @@
           <form action="professions-listing-2" method="post" class="form">
 
             <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukInput({
                   label: {
                     text: "Keyword",
@@ -72,7 +72,7 @@
                 }) }}
               </div>
 
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukCheckboxes({
                   idPrefix: "profession-nations",
                   name: "profession-nations",
@@ -112,14 +112,14 @@
                 }) }}
               </div>
 
-              <div class="govuk-grid-column-one-third">
+              <div class="govuk-grid-column-one-quarter">
                 {{ govukCheckboxes({
-                  idPrefix: "profession-modified-by",
-                  name: "profession-modified-by",
+                  idPrefix: "profession-regulators",
+                  name: "profession-regulators",
                   classes: "govuk-checkboxes--small rpr-internal-listing__filter",
                   fieldset: {
                     legend: {
-                      text: "Last modified",
+                      text: "Regulators",
                       isPageHeading: true,
                       classes: "govuk-fieldset__legend--s"
                     }
@@ -129,14 +129,94 @@
                   },
                   items: [
                     {
-                      value: "Clare Jones",
-                      text: "Clare Jones",
-                      checked: checked("profession-modified-by", "Clare Jones")
+                      value: "General Medicine Council",
+                      text: "General Medicine Council",
+                      checked: checked("profession-regulators", "General Medicine Council")
                     },
                     {
-                      value: "Alex Young",
-                      text: "Alex Young",
-                      checked: checked("profession-modified-by", "Alex Young")
+                      value: "Capita Gas Registration and Ancillary Services Ltd",
+                      text: "Capita Gas Registration and Ancillary Services Ltd",
+                      checked: checked("profession-regulators", "Capita Gas Registration and Ancillary Services Ltd")
+                    },
+                    {
+                      value: "Education Workforce Council",
+                      text: "Education Workforce Council",
+                      checked: checked("profession-regulators", "Education Workforce Council")
+                    }
+                  ]
+                }) }}
+              </div>
+
+              <div class="govuk-grid-column-one-quarter">
+                {{ govukCheckboxes({
+                  idPrefix: "profession-industries",
+                  name: "profession-industries",
+                  classes: "govuk-checkboxes--small rpr-internal-listing__filter",
+                  fieldset: {
+                    legend: {
+                      text: "Industry / sector",
+                      isPageHeading: true,
+                      classes: "govuk-fieldset__legend--s"
+                    }
+                  },
+                  hint: {
+                    text: "Select all that apply."
+                  },
+                  items: [
+                    {
+                      value: "construction-engineering",
+                      text: "Construction & Engineering",
+                      checked: checked("profession-industries", "construction-engineering")
+                    },
+                    {
+                      value: "education",
+                      text: "Education",
+                      checked: checked("profession-industries", "education")
+                    },
+                    {
+                      value: "finance",
+                      text: "Finance",
+                      checked: checked("profession-industries", "finance")
+                    },
+                    {
+                      value: "health",
+                      text: "Health",
+                      checked: checked("profession-industries", "health")
+                    },
+                    {
+                      value: "law",
+                      text: "Law",
+                      checked: checked("profession-industries", "law")
+                    },
+                    {
+                      value: "shipping",
+                      text: "Shipping",
+                      checked: checked("profession-industries", "shipping")
+                    },
+                    {
+                      value: "other",
+                      text: "Other",
+                      checked: checked("profession-industries", "other")
+                    },
+                    {
+                      value: "security",
+                      text: "Security",
+                      checked: checked("profession-industries", "security")
+                    },
+                    {
+                      value: "transport",
+                      text: "Transport",
+                      checked: checked("profession-industries", "transport")
+                    },
+                    {
+                      value: "energy",
+                      text: "Energy",
+                      checked: checked("profession-industries", "energy")
+                    },
+                    {
+                      value: "science",
+                      text: "Science",
+                      checked: checked("profession-industries", "science")
                     }
                   ]
                 }) }}
@@ -169,6 +249,7 @@
 
     <div class="govuk-grid-column-full">
 
+
       {% if data['profession-keyword'] %}
         <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Keywords:</span> <strong class="govuk-tag">{{ data['profession-keyword'] }}</strong></p>
       {% endif %}
@@ -181,19 +262,25 @@
         </p>
       {% endif %}
 
-      {% if data['profession-modified-by'] %}
-        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Modified by:</span> 
-        {% for modifiedBy in data['profession-modified-by'] %}
-          <strong class="govuk-tag">{{ modifiedBy }}</strong>
+      {% if data['profession-regulators'] %}
+        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Regulators:</span> 
+        {% for regulator in data['profession-regulators'] %}
+          <strong class="govuk-tag">{{ regulator }}</strong>
         {% endfor %}
         </p>
       {% endif %}
-      
+
+      {% if data['profession-industries'] %}
+        <p class="rpr-listing__search-criteria-container"><span class="govuk-!-font-weight-bold">Industries / sectors:</span> 
+        {% for industry in data['profession-industries'] %}
+          <strong class="govuk-tag">{{ industry }}</strong>
+        {% endfor %}
+        </p>
+      {% endif %}
 
       {% if data['profession-keyword'] %}
 
       <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">1</span> profession found.</p>
-
 
       {{ govukTable({
         firstCellIsHeader: true,
@@ -211,7 +298,10 @@
             text: "last modified"
           },
           {
-            text: "Modified by"
+            text: "Regulators"
+          },
+          {
+            text: "Industry / sector"
           },
           {
             text: "Status"
@@ -235,7 +325,10 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -250,7 +343,7 @@
 
       {% else %}
 
-      <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">10</span> professions found.</p>
+      <p><span class="govuk-!-font-size-36 govuk-!-font-weight-bold">20</span> professions found.</p>
 
 
       {{ govukTable({
@@ -269,7 +362,10 @@
             text: "last modified"
           },
           {
-            text: "Modified by"
+            text: "Regulators"
+          },
+          {
+            text: "Industry / sector"
           },
           {
             text: "Status"
@@ -293,13 +389,42 @@
               text: "21-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-5-new-profession">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Neurology"
+            },
+            {
+              text: "GMCRP153"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "16-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="#">View details</a>'
             }
           ],
           [
@@ -316,10 +441,13 @@
               text: "13-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
             },
             {
-              text: "Draft"
+              text: "Health"
+            },
+            {
+              text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-4-neurosurgery">View details</a>'
@@ -339,7 +467,10 @@
               text: "08-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -362,7 +493,88 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Occupational medicine"
+            },
+            {
+              text: "GMCRP157"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "16-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Ophthalmology"
+            },
+            {
+              text: "GMCRP158"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "11-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Oral and maxillo-facial surgery"
+            },
+            {
+              text: "GMCRP159"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "02-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -385,7 +597,10 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -408,13 +623,42 @@
               text: "27-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Paediatrics"
+            },
+            {
+              text: "GMCRP162"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "13-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
             }
           ],
           [
@@ -431,7 +675,62 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Public health medicine"
+            },
+            {
+              text: "GMCRP164"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "12-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Renal medicine"
+            },
+            {
+              text: "GMCRP165"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "18-11-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -454,13 +753,68 @@
               text: "02-11-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
             },
             {
               html: '<a class="govuk-link" href="profession-1-plastic-surgery.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Rheumatology"
+            },
+            {
+              text: "GMCRP167"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "13-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
+            }
+          ],
+          [
+            {
+              text: "Trauma and orthopaedic surgery"
+            },
+            {
+              text: "GMCRP168"
+            },
+            {
+              text: "United Kingdom"
+            },
+            {
+              text: "10-12-2021"
+            },
+            {
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
+            },
+            {
+              text: "Published"
+            },
+            {
+              html: '<a class="govuk-link" href="profession-3-nuclear-medicine.html">View details</a>'
             }
           ],
           [
@@ -477,7 +831,10 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -500,7 +857,10 @@
               text: "16-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
@@ -523,7 +883,10 @@
               text: "12-12-2021"
             },
             {
-              text: "Alex Young"
+              text: "General Medicine Council"
+            },
+            {
+              text: "Health"
             },
             {
               text: "Published"
