--- a/app/views/beta-sprint-3/ra-user-flow-1-without-approval/index-after-profession-added.html
+++ b/app/views/beta-sprint-3/ra-user-flow-1-without-approval/index-after-profession-added.html
@@ -49,7 +49,7 @@
         Welcome GMC users
       </h1>
 
-      <p class="govuk-body">This is the home screen for users of General Medical Council.</p>
+      <p class="govuk-body">This is the home screen for users of General Medicine Council.</p>
 
     </div>
 
