--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,6 +27,133 @@
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
+      <h2 class="govuk-heading-l" id="beta-sprint-4-2">
+        Beta sprint 4.2 - Draft and publish design
+      </h2>
+
+      <h3 class="govuk-heading-m">
+        Creating a new profession
+      </h3>
+
+      <p>National admin creating a new profession:</p>
+
+      <div>
+        <a href="beta-sprint-4/national-admin-v2/professions-listing-1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Create a new profession
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>and then RA (GMC) users will see the draft in the professions listing page also. Please view the "Dentist" page.</p>
+
+      <div>
+        <a href="beta-sprint-4/ra-users-v2/professions-listing-1-new-draft-saved" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          RA user to edit a draft new profession
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <h3 class="govuk-heading-m">
+        Amending an existing profession
+      </h3>
+
+      <p>RA users to edit an existing profession (please edit "Nuclear medicine")</p>
+
+      <div>
+        <a href="beta-sprint-4/ra-users-v2/professions-listing-1-new-draft-saved" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          RA user to edit an exisiting profession
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
+      <h2 class="govuk-heading-l" id="beta-sprint-4">
+        Beta sprint 4
+      </h2>
+
+      <h3 class="govuk-heading-m">
+        Internal user interface
+      </h3>
+
+      <p>This is the prototype for National admin</p>
+
+      <div>
+        <a href="beta-sprint-4/national-admin/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as an national admin
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>This is the prototype for BEIS users</p>
+
+      <div>
+        <a href="beta-sprint-4/beis-user-flow-1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a BEIS user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>This is the prototype for UKCPQ users</p>
+
+      <div>
+        <a href="beta-sprint-4/ukcpq-users/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a UKCPQ user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>This is the prototype for General Medical Council users</p>
+
+      <div>
+        <a href="beta-sprint-4/ra-users/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          Login as a General Medical Council user
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <h3 class="govuk-heading-m">
+        Shortcuts
+      </h3>
+
+      <p>This is the shortcut to the approvals journey of RA amendments for UKCPQ users.</p>
+
+      <div>
+        <a href="beta-sprint-4/ukcpq-users/ra-approval-listing-1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          UKCPQ users approving RA amendments
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <p>This is the shortcut to the approvals journey of RA amendments for RA users.</p>
+
+      <div>
+        <a href="beta-sprint-4/ra-users/ra-approval-listing-1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
+          RA users (GMC) submitting RA amendments
+          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
+            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+          </svg>
+        </a>
+      </div>
+
+      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
+
       <h2 class="govuk-heading-l" id="beta-sprint-3">
         Beta sprint 3
       </h2>
@@ -113,81 +240,6 @@
         </a>
       </div>
 
-      <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-      <h2 class="govuk-heading-l" id="beta-sprint-3">
-        Beta sprint 4
-      </h2>
-
-      <h3 class="govuk-heading-m">
-        Internal user interface
-      </h3>
-
-      <p>This is the prototype for National admin</p>
-
-      <div>
-        <a href="beta-sprint-4/national-admin/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          Login as an national admin
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
-
-      <p>This is the prototype for BEIS users</p>
-
-      <div>
-        <a href="beta-sprint-4/beis-user-flow-1/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          Login as a BEIS user
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
-
-      <p>This is the prototype for UKCPQ users</p>
-
-      <div>
-        <a href="beta-sprint-4/ukcpq-users/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          Login as a UKCPQ user
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
-
-      <p>This is the prototype for General Medical Council users</p>
-
-      <div>
-        <a href="beta-sprint-4/ra-users/" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          Login as a General Medical Council user
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
-
-      <p>This is the shortcut to the approvals journey of RA amendments for UKCPQ users.</p>
-
-      <div>
-        <a href="beta-sprint-4/ukcpq-users/ra-approval-listing-1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          UKCPQ users approving RA amendments
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
-
-      <p>This is the shortcut to the approvals journey of RA amendments for RA users.</p>
-
-      <div>
-        <a href="beta-sprint-4/ra-users/ra-approval-listing-1" role="button" draggable="false" class="govuk-button govuk-button--start" data-module="govuk-button">
-          RA users (GMC) submitting RA amendments
-          <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewbox="0 0 33 40" role="presentation" focusable="false">
-            <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-          </svg>
-        </a>
-      </div>
     </div>
   </div>
 
