--- a/app/views/index.html
+++ b/app/views/index.html
@@ -72,6 +72,13 @@
         </a>
       </div>
 
+      <h3 class="govuk-heading-m">
+        Content design provocations
+      </h3>
+
+      <p><a href="beta-sprint-4/start-page-design/design1">Start page design 1</a></p>
+      <p><a href="beta-sprint-4/start-page-design/design2">Start page design 2</a></p>
+
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
       <h2 class="govuk-heading-l" id="beta-sprint-4">
