--- a/app/views/beta-sprint-4/start-page-design/design3.html
+++ b/app/views/beta-sprint-4/start-page-design/design3.html
@@ -22,46 +22,14 @@
       <p>Use this service to:</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>check if your profession is regulated </li>
-        <li>find contact details for your profession’s regulatory authority</li>
-        <li>view annual figures for applications to work in regulated professions in the UK</li>
+        <li><a class="govuk-link" href="professions-listing-1">check if your profession is regulated</a></li>
+        <li><a class="govuk-link" href="ra-listing-1">find contact details for your profession’s regulatory authority</a></li>
+        <li><a class="govuk-link" href="#">view annual figures for applications to work in regulated professions in the UK</a></li>
       </ul>
-
-      <h2 class="govuk-heading-m">Check if your profession is regulated</h2>
-
-      <p>You can <a class="govuk-link" href="professions-listing-1">check if a profession is regulated and the qualifications and experience you need to work in the UK</a>.</p>
-
-      <h2 class="govuk-heading-m">Find contact details for regulatory authorities</h2>
-
-      <p>You can <a class="govuk-link" href="ra-listing-1">contact the regulator for your profession</a> to find out about the process for becoming a recognised and registered professional.</p>
-
-      <h2 class="govuk-heading-m">View annual figures for applications to work in regulated professions</h2>
-
-      <p>You can <a class="govuk-link" href="#">find information about the total number of applications and the number of successful applications for each profession</a>.</p>
 
       <h2 class="govuk-heading-m">Get help checking a regulated profession</h2>
 
       <p>Contact the <a class="govuk-link" href="#">UK Centre for Professional Qualifications (UK CPQ)</a> If you need support checking a regulated profession.</p>
-
-      <h2 class="govuk-heading-m">Sign in to the BEIS Regulated Professions Register (RPR)</h2>
-
-      <p>Use this service to:</p>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li>manage and add information regulators and professions</li>
-        <li>upload application and decision data</li>
-      </ul>
-
-      <a href="professions-select-service.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Sign in
-        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" r ole="presentation" focusable="false">
-          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
-        </svg>
-      </a>
-
-      <h2 class="govuk-heading-m">Before you start</h2>
-
-      <p>Please <a class="govuk-link" href="#">request an account</a> if you have not yet received sign-in details to access this service.</p>
 
       <p><a class="govuk-link" href="#">This service is also available in Welsh (Cymraeg).</a></p>
       
