--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,7 +77,9 @@
       </h3>
 
       <p><a href="beta-sprint-4/start-page-design/design1">Start page design 1</a></p>
+      <p><a href="beta-sprint-4/start-page-design/design1-old">Start page design 1 (old)</a></p>
       <p><a href="beta-sprint-4/start-page-design/design2">Start page design 2</a></p>
+      <p><a href="beta-sprint-4/start-page-design/design3">Start page design 3</a></p>
 
       <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
 
