--- a/app/views/beta-sprint-4/start-page-design/design1.html
+++ b/app/views/beta-sprint-4/start-page-design/design1.html
@@ -43,6 +43,26 @@
 
       <p>Contact the <a class="govuk-link" href="#">UK Centre for Professional Qualifications (UK CPQ)</a> If you need support checking a regulated profession.</p>
 
+      <h2 class="govuk-heading-m">Sign in to the BEIS Regulated Professions Register (RPR)</h2>
+
+      <p>Use this service to:</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>manage and add information regulators and professions</li>
+        <li>upload application and decision data</li>
+      </ul>
+
+      <a href="professions-select-service.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
+        Sign in
+        <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" r ole="presentation" focusable="false">
+          <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
+        </svg>
+      </a>
+
+      <h2 class="govuk-heading-m">Before you start</h2>
+
+      <p>Please <a class="govuk-link" href="#">request an account</a> if you have not yet received sign-in details to access this service.</p>
+
       <p><a class="govuk-link" href="#">This service is also available in Welsh (Cymraeg).</a></p>
 
     </div>
